<resources>
    <string name="app_name">DigiGate</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="DigiGate">digigate</string>
    <string name="digigate">DigiGate</string>
    <string name="sign_up">Sign up</string>
    <string name="name">"   Name"</string>
    <string name="roll_number">"   Roll Number"</string>
    <string name="phone_number">"   Phone Number"</string>
    <string name="hostel">"   Hostel"</string>
    <string name="room_no">"   Room No."</string>
    <string name="email">"    Email"</string>
    <string name="password">"    Password"</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dashboard">Dashboard</string>
    <string name="qr_scanner">QR Scanner</string>
    <string name="scanner_instruction">Place camera in front of the QR code to scan</string>
    <string name="entry_scanner">Entry Scanner</string>
    <string name="exit_scanner">Exit Scanner</string>
    <string name="admin_initials">A</string>
    <string name="your_qr_code">Your QR Code</string>
    <string name="qr_instruction">Place QR code inside the\n frame to scan</string>
    <string name="entry_data">Entry</string>
    <string name="exit_data">Exit</string>
    <string name="select_date">Select Date</string>
    <string name="temp_name">Agrim Gupta</string>
    <string name="Name">Name</string>
    <string name="roll_no">Roll No.</string>
    <string name="temp_roll_no">22BCS016</string>
    <string name="Hostel">Hostel</string>
    <string name="temp_address">H-4,Vivekanand Hostel</string>
    <string name="Room_no">Room No.</string>
    <string name="temp_room_no">H-404</string>
    <string name="phone_no">Phone No.</string>
    <string name="temp_no">9832308013</string>
    <string name="qr_code">QR Code</string>

</resources>