<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.home.SignUpActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="196dp"
        android:layout_height="64dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/epilogue_bold"
        android:text="@string/digigate"
        android:textColor="@android:color/white"
        android:textFontWeight="600"
        android:textSize="44sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/epilogue_regular"
        android:text="Already have an account? Login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textFontWeight="600"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/signuppage"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/epilogue_bold"
            android:textFontWeight="600"
            android:text="@string/sign_up"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/inputbg"
            android:drawableStart="@drawable/ic_person"
            android:fontFamily="@font/epilogue_regular"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_title" />

        <EditText
            android:id="@+id/roll_number"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:textSize="14sp"
            android:background="@drawable/inputbg"
            android:fontFamily="@font/epilogue_regular"
            android:drawableStart="@drawable/ic_person"
            android:hint="@string/roll_number"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/inputbg"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/epilogue_regular"
            android:drawableStart="@drawable/ic_phone"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/roll_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/hostel"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/inputbg"
            android:textSize="14sp"
            android:drawableStart="@drawable/ic_house"
            android:hint="@string/hostel"
            android:fontFamily="@font/epilogue_regular"
            android:inputType="text"
            android:layout_marginEnd="4dp"
            android:padding="12dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/room_no"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintWidth_percent="0.48"/>

        <EditText
            android:id="@+id/room_no"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/inputbg"
            android:drawableStart="@drawable/ic_book"
            android:textSize="14sp"
            android:hint="@string/room_no"
            android:fontFamily="@font/epilogue_regular"
            android:inputType="text"
            android:layout_marginStart="4dp"
            android:padding="12dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/phone_number"
            app:layout_constraintStart_toEndOf="@id/hostel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.48"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/inputbg"
            android:drawableStart="@drawable/ic_email"
            android:textSize="14sp"
            android:hint="@string/email"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/epilogue_regular"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/hostel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/inputbg"
            android:drawableStart="@drawable/ic_key"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:fontFamily="@font/epilogue_regular"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_button"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:padding="12dp"
            android:text="Sign Up"
            android:textAllCaps="false"
            android:fontFamily="@font/epilogue_bold"
            android:textFontWeight="600"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
