<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.admin.AdminDashBoardActivity">

    <TextView
        android:id="@+id/title_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/epilogue_bold"
        android:text="@string/dashboard"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        />
    <View
        android:id="@+id/vDivider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/blue"
        app:layout_constraintTop_toBottomOf="@+id/title_dashboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"/>
    <Button
        android:id="@+id/btnAvatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/avatar_button"
        android:text="@string/admin_initials"
        android:fontFamily="@font/inter_regular"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:backgroundTint="@color/red"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"/>

    <Button
        android:id="@+id/btnEntry"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/lato_bold"
        android:text="@string/entry_data"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_dashboard" />
    <Button
        android:id="@+id/btnExit"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/lato_bold"
        android:text="@string/exit_data"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_dashboard" />

    <EditText
        android:id="@+id/date_select"
        android:layout_width="336dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_date_select"
        android:drawableStart="@drawable/account_1"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/select_date"
        android:fontFamily="@font/inter_regular"
        android:padding="16dp"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnExit" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_entries"
        android:layout_width="336dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/date_select"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>




